@@ -1,6 +1,6 @@
 // ****************************************************************************
 // 
-// Copyright (C) 2005-2009  Doom9 & al
+// Copyright (C) 2005-2012 Doom9 & al
 // 
 // This program is free software; you can redistribute it and/or modify
 // it under the terms of the GNU General Public License as published by
@@ -75,9 +75,9 @@ namespace MeGUI
     }
 
     public enum ProcessPriority : int { IDLE = 0, BELOW_NORMAL, NORMAL, ABOVE_NORMAL, HIGH };
-    public enum JobTypes: int { VIDEO=0, AUDIO, MUX, MERGE, INDEX, AVS, VOBSUB, CUT};
-    public enum JobStatus: int { WAITING = 0, PROCESSING, POSTPONED, ERROR, ABORTED, DONE, SKIP };
-    // status of job, 0: waiting, 1: processing, 2: postponed, 3: error, 4: aborted, 5: done
+    public enum JobTypes: int { VIDEO=0, AUDIO, MUX, MERGE, INDEX, AVS, VOBSUB, CUT };
+    public enum JobStatus: int { WAITING = 0, PROCESSING, POSTPONED, ERROR, ABORTED, DONE, SKIP, ABORTING };
+    // status of job, 0: waiting, 1: processing, 2: postponed, 3: error, 4: aborted, 5: done, 6: skip, 7: aborting
 	
     
     /// <summary>
